feat: adding company managing endpoints.
